--- a/viz/index.html
+++ b/viz/index.html
@@ -3,59 +3,40 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>CEM — Coil Ring UI (tek dosya, düzgün hizalı)</title>
+<title>CEM — Coil Ring UI (rotor bloklu)</title>
 <style>
   :root{
     /* Boyutlar */
     --ring: 560px;            /* dış halka çapı */
     --trackInset: 72px;       /* bobin yolunun dış kenardan içe uzaklığı  */
     --radius: calc(var(--ring)/2 - var(--trackInset)); /* bobinlerin gerçek yarıçapı */
-    --coil-w: 56px;
-    --coil-h: 28px;
+    --coil-w: 56px; --coil-h: 28px;
     --disc: 310px;            /* orta disk çapı */
+    --marker-w: 42px;         /* rotor bloğunun genişliği */
+    --marker-h: 20px;         /* rotor bloğunun yüksekliği */
+    --markerR: calc(var(--disc)/2 - 18px); /* bloğun diske göre yarıçapı */
 
     /* Renkler */
-    --bg: #0a0b10;
-    --panel: #0e1219;
-    --border: #1a2130;
-    --text: #e9eef6;
-    --muted:#9aa6b2;
-    --glow: #57ff9a;
+    --bg: #0a0b10; --panel:#0e1219; --border:#1a2130; --text:#e9eef6; --muted:#9aa6b2; --glow:#57ff9a;
   }
   *{box-sizing:border-box}
   html,body{height:100%}
   body{
-    margin:0;
-    background: radial-gradient(1100px 800px at 20% -10%, #111420, var(--bg) 60%);
-    color:var(--text);
-    font:14px/1.5 Inter,system-ui,-apple-system,Segoe UI,Arial;
+    margin:0; background: radial-gradient(1100px 800px at 20% -10%, #111420, var(--bg) 60%);
+    color:var(--text); font:14px/1.5 Inter,system-ui,-apple-system,Segoe UI,Arial;
     display:grid; place-items:center; padding:20px;
   }
-  .stage{
-    width:min(1140px,96vw);
-    display:grid; grid-template-columns: 1fr 340px; gap:28px; align-items:center;
-  }
+  .stage{ width:min(1140px,96vw); display:grid; grid-template-columns: 1fr 340px; gap:28px; align-items:center; }
   @media (max-width:1020px){ .stage{grid-template-columns:1fr} }
 
   /* ——— GÖRSEL ALAN ——— */
   .arena{
-    position:relative;
-    width:var(--ring); height:var(--ring);
-    margin:auto; border-radius:50%;
-    background:
-      radial-gradient(circle at 50% 50%, #0e1219 40%, #0c1119 41%),
-      conic-gradient(#0f1521, #0f1724 40%, #101826);
+    position:relative; width:var(--ring); height:var(--ring); margin:auto; border-radius:50%;
+    background: radial-gradient(circle at 50% 50%, #0e1219 40%, #0c1119 41%), conic-gradient(#0f1521, #0f1724 40%, #101826);
     box-shadow: inset 0 0 60px #000a;
   }
-  .ring-outer{
-    position:absolute; inset:10px; border-radius:50%;
-    border:10px solid #ffffff14; box-shadow:0 0 0 1px #fff1 inset;
-    opacity:.35;
-  }
-  .ring-track{
-    position:absolute; inset:var(--trackInset); border-radius:50%;
-    border:10px solid #8bd0ff26; box-shadow:0 0 0 1px #ffffff10 inset;
-  }
+  .ring-outer{ position:absolute; inset:10px; border-radius:50%; border:10px solid #ffffff14; box-shadow:0 0 0 1px #fff1 inset; opacity:.35; }
+  .ring-track{ position:absolute; inset:var(--trackInset); border-radius:50%; border:10px solid #8bd0ff26; box-shadow:0 0 0 1px #ffffff10 inset; }
   .ring-dash{ position:absolute; inset:0; border-radius:50%; border:1px dashed #233042; opacity:.4 }
 
   /* Merkez disk */
@@ -71,266 +52,44 @@
     background: radial-gradient(circle at 35% 35%, #808a98, #566171 60%, #465160);
     box-shadow: inset 0 0 0 6px #cdd3dc55, 0 8px 16px #0009;
   }
-  .axle{
-    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
-    width:16px; height:16px; border-radius:50%; background:#2a333f;
-    box-shadow: inset 0 0 0 3px #111820;
-  }
+  .axle{ position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); width:16px; height:16px; border-radius:50%; background:#2a333f; box-shadow: inset 0 0 0 3px #111820; }
 
-  /* Rotor iğnesi */
-  .needle{
-    position:absolute; left:50%; top:50%; transform:translate(-50%,-100%) rotate(0deg);
-    width:4px; height:calc(var(--radius) + 28px);
-    background:linear-gradient(#ffc400,#ff9900);
-    transform-origin:50% calc(100% - 28px);
-    border-radius:2px; box-shadow:0 0 14px #ffb30080;
+  /* Rotor üzerindeki dönen blok (iğne yerine) */
+  .rotor-marker{
+    position:absolute; left:50%; top:50%;
+    width:var(--marker-w); height:var(--marker-h); border-radius:10px;
+    transform-origin:50% calc(var(--markerR) + var(--marker-h)/2);
+    transform: translate(-50%,-50%) rotate(0deg) translateY(calc(-1 * var(--markerR)));
+    background: linear-gradient(180deg, #e6ecf5, #d7dfea);
+    box-shadow: 0 2px 10px #0008, inset 0 0 0 1px #b7c1ce;
   }
+  .rotor-marker::before, .rotor-marker::after{
+    content:""; position:absolute; top:0; width:12px; height:100%; background:#9aa7b6;
+  }
+  .rotor-marker::before{ left:0; box-shadow: inset -2px 0 3px #0003 }
+  .rotor-marker::after{ right:0; box-shadow: inset  2px 0 3px #0003 }
 
-  /* ——— BOBİNLER ———
-     Artık trig ile (x,y) yerleştiriyoruz; transform sadece rotasyon için. */
+  /* ——— BOBİNLER ——— (trig ile yerleşim) */
   .coil{
-    position:absolute; left:0; top:0;
-    width:var(--coil-w); height:var(--coil-h);
-    border-radius:8px; overflow:hidden;
-    transform: translate(-50%,-50%) rotate(var(--rot));
-    filter:brightness(.85) saturate(.9);
-    box-shadow: 0 3px 12px #0008, 0 8px 24px #0005;
+    position:absolute; left:0; top:0; width:var(--coil-w); height:var(--coil-h);
+    border-radius:8px; overflow:hidden; transform: translate(-50%,-50%) rotate(var(--rot));
+    filter:brightness(.85) saturate(.9); box-shadow: 0 3px 12px #0008, 0 8px 24px #0005;
   }
   .coil .body{ position:absolute; inset:0; background:linear-gradient(180deg,#bd7b2a 0%, #a45d1b 50%, #bd7b2a 100%); }
-  .coil .capL, .coil .capR{
-    position:absolute; top:0; width:10px; height:100%; background:#5f6b77; filter:brightness(1.1);
-  }
+  .coil .capL, .coil .capR{ position:absolute; top:0; width:10px; height:100%; background:#5f6b77; filter:brightness(1.1); }
   .coil .capL{ left:0;  box-shadow: inset -2px 0 3px #0005 }
   .coil .capR{ right:0; box-shadow: inset  2px 0 3px #0005 }
   .coil.active{ box-shadow: 0 3px 12px #0008, 0 0 32px var(--glow); filter:brightness(1) }
-  .coil.active::after{
-    content:""; position:absolute; right:-12px; top:50%; width:12px; height:12px; margin-top:-6px;
-    border-radius:50%; background:var(--glow); box-shadow:0 0 16px var(--glow);
-  }
+  .coil.active::after{ content:""; position:absolute; right:-12px; top:50%; width:12px; height:12px; margin-top:-6px; border-radius:50%; background:var(--glow); box-shadow:0 0 16px var(--glow); }
 
   /* ——— PANEL ——— */
-  .panel{
-    background:var(--panel); border:1px solid var(--border); border-radius:14px; padding:14px;
-    box-shadow:0 12px 36px #0007; backdrop-filter: blur(2px);
-  }
+  .panel{ background:var(--panel); border:1px solid var(--border); border-radius:14px; padding:14px; box-shadow:0 12px 36px #0007; backdrop-filter: blur(2px); }
   .panel h3{margin:4px 0 8px; font-size:15px; opacity:.95}
   .row{display:flex; gap:8px; flex-wrap:wrap; align-items:center; margin:8px 0}
-  button,select,input{
-    background:#0c1119; color:var(--text); border:1px solid var(--border);
-    border-radius:10px; padding:8px 12px; font:600 13px/1 Inter,system-ui,Arial;
-  }
+  button,select,input{ background:#0c1119; color:var(--text); border:1px solid var(--border); border-radius:10px; padding:8px 12px; font:600 13px/1 Inter,system-ui,Arial; }
   button{background:linear-gradient(180deg,#2b72ff,#1f59d1); border-color:#2a65e0; cursor:pointer}
   button.secondary{background:#121722}
   button:disabled{opacity:.6; cursor:not-allowed}
   input[type="number"]{width:92px}
   input[type="text"]{width:100%}
-  .stats{font:12px/1.6 ui-monospace,Menlo,Consolas; color:#cfe2ff; background:#09101a; border:1px solid #162033; border-radius:8px; padding:8px; margin-top:8px}
-  .hint{font-size:12px;color:var(--muted);margin-top:6px}
-</style>
-</head>
-<body>
-
-<div class="stage">
-  <!-- Görsel alan -->
-  <div class="arena" id="arena">
-    <div class="ring-outer"></div>
-    <div class="ring-track"></div>
-    <div class="ring-dash"></div>
-
-    <div class="disc" id="disc"></div>
-    <div class="hub"></div>
-    <div class="axle"></div>
-
-    <div class="needle" id="needle"></div>
-    <!-- Coils JS ile eklenecek -->
-  </div>
-
-  <!-- Kontrol paneli -->
-  <div class="panel">
-    <h3>Çalıştır</h3>
-    <div class="row">
-      <button id="btnStart">Başlat</button>
-      <button id="btnStop" class="secondary">Durdur</button>
-      <button id="btnReset" class="secondary">Sıfırla</button>
-    </div>
-
-    <h3>Parametreler</h3>
-    <div class="row">
-      <label>EM sayısı (N)
-        <input type="number" id="inpN" min="1" max="64" value="4">
-      </label>
-      <label>Mod
-        <select id="inpMode">
-          <option value="1">Tekli</option>
-          <option value="2" selected>İkili</option>
-        </select>
-      </label>
-      <label>Yön
-        <select id="inpDir">
-          <option value="1" selected>CW (+)</option>
-          <option value="-1">CCW (−)</option>
-        </select>
-      </label>
-    </div>
-    <div class="row">
-      <label>Hız (RPM)
-        <input type="number" id="inpRPM" value="300">
-      </label>
-      <label>Adım (ms)
-        <input type="number" id="inpStep" value="40">
-      </label>
-      <label>Dwell (°)
-        <input type="number" id="inpDwell" value="60">
-      </label>
-    </div>
-    <label>Başlangıç açıları (°, virgülle)
-      <input type="text" id="inpAngles" value="0,90,180,270">
-    </label>
-    <div class="row" style="margin-top:6px">
-      <button class="secondary" id="btn4x90">4×90°</button>
-      <button class="secondary" id="btn6x60">6×60°</button>
-      <button class="secondary" id="btn8x45">8×45°</button>
-      <button class="secondary" id="btn12x30">12×30°</button>
-    </div>
-
-    <div class="stats" id="stats">t=0.000s • açı=0.0° • rpm=300 • aktif=[]</div>
-    <div class="hint">İpucu: Parametreleri değiştir → <b>Başlat</b>. Yeşil parlayan bobin(ler) aktiftir; sarı iğne rotor açısıdır.</div>
-  </div>
-</div>
-
-<script>
-/* ===== Yardımcılar ===== */
-const $ = id => document.getElementById(id);
-const wrap360 = a => (a%360 + 360) % 360;
-const clamp = (x,a,b)=> Math.max(a, Math.min(b, x));
-const angDistCCW = (from,to)=> { let d = wrap360(to-from); if(d<0) d+=360; return d; };
-
-/* ===== DOM ===== */
-const arena = $("arena"), needle = $("needle"), disc = $("disc"), stats = $("stats");
-const inpN=$("inpN"), inpMode=$("inpMode"), inpDir=$("inpDir"),
-      inpRPM=$("inpRPM"), inpStep=$("inpStep"), inpDwell=$("inpDwell"),
-      inpAngles=$("inpAngles");
-const btnStart=$("btnStart"), btnStop=$("btnStop"), btnReset=$("btnReset");
-const btn4x90=$("btn4x90"), btn6x60=$("btn6x60"), btn8x45=$("btn8x45"), btn12x30=$("btn12x30");
-
-/* ===== Durum ===== */
-let N=4, mode=2, dir=1, rpm=300, stepMs=40, dwell=60;
-let angles=[0,90,180,270];
-let t=0, ang=0, raf=null, last=0;
-let coils=[];
-
-/* ===== CSS değişkenlerini oku ===== */
-function cssNum(sel, name){
-  const cs = getComputedStyle(sel);
-  return parseFloat(cs.getPropertyValue(name));
-}
-function trackRadius(){
-  const ring = cssNum(document.documentElement, '--ring');
-  const inset = cssNum(document.documentElement, '--trackInset');
-  return ring/2 - inset;
-}
-function ringCenter(){
-  return { cx: arena.clientWidth/2, cy: arena.clientHeight/2 };
-}
-
-/* ===== Bobinleri kur ve yerleştir (trig ile tam yol üstüne) ===== */
-function buildCoils(){
-  coils.forEach(c=>c.el.remove()); coils=[];
-  for(let i=0;i<N;i++){
-    const el = document.createElement('div'); el.className='coil';
-    const body = document.createElement('div'); body.className='body';
-    const capL = document.createElement('div'); capL.className='capL';
-    const capR = document.createElement('div'); capR.className='capR';
-    el.append(body,capL,capR); arena.appendChild(el);
-    coils.push({el});
-  }
-  placeCoils();
-}
-function placeCoils(){
-  const r = trackRadius();
-  const {cx, cy} = ringCenter();
-  coils.forEach((c, i) => {
-    const deg = (360/N) * i;           // çevresel konum
-    const rad = (deg - 90) * Math.PI/180; // 0° = tepe
-    c.el.style.left = (cx + r*Math.cos(rad)) + "px";
-    c.el.style.top  = (cy + r*Math.sin(rad)) + "px";
-    c.el.style.setProperty('--rot', deg + 'deg'); // yola teğet yönelim
-  });
-}
-
-/* ===== UI oku ===== */
-function readUI(){
-  N = clamp(parseInt(inpN.value||"4"),1,64);
-  mode = parseInt(inpMode.value||"2");
-  dir  = parseInt(inpDir.value||"1");
-  rpm  = parseFloat(inpRPM.value||"300");
-  stepMs = parseFloat(inpStep.value||"40");
-  dwell  = parseFloat(inpDwell.value||"60");
-
-  const arr = (inpAngles.value||"").split(",").map(s=>parseFloat(s.trim())).filter(v=>!Number.isNaN(v)).map(wrap360);
-  if(arr.length===N){ angles = arr; }
-  else{ angles = [...Array(N)].map((_,i)=> i*(360/N)); inpAngles.value = angles.join(","); }
-
-  if(coils.length!==N) buildCoils();
-  placeCoils();
-}
-
-/* ===== Aktif EM'ler ===== */
-function activeForAngle(a){
-  const on = new Set();
-  for(let i=0;i<N;i++){
-    const aOn = wrap360(angles[i]);
-    const aOff = wrap360(aOn + dwell);
-    const span = angDistCCW(aOn, aOff);
-    const dOn = angDistCCW(aOn, wrap360(a));
-    if(dOn>=0 && dOn<span){
-      on.add(i);
-      if(mode===2) on.add((i+1)%N);
-    }
-  }
-  return [...on].sort((x,y)=>x-y);
-}
-
-/* ===== Çizim ===== */
-function render(){
-  const act = activeForAngle(ang);
-  coils.forEach((c,i)=> c.el.classList.toggle('active', act.includes(i)));
-  needle.style.transform = `translate(-50%,-100%) rotate(${ang}deg)`;
-  disc.style.transform = `translate(-50%,-50%) rotate(${-(ang*0.4)}deg)`; // hafif parallax
-  stats.textContent = `t=${t.toFixed(3)}s • açı=${wrap360(ang).toFixed(1)}° • rpm=${rpm.toFixed(1)} • aktif=[${act.join(",")}]`;
-}
-
-/* ===== Döngü ===== */
-function loop(now){
-  if(!last) last = now;
-  const dt = (now - last)/1000, step = stepMs/1000;
-  let acc = dt;
-  while(acc >= step){
-    t += step;
-    ang = wrap360(ang + 360*(rpm/60)*step*dir);
-    acc -= step;
-  }
-  last = now - acc*1000;
-  render();
-  raf = requestAnimationFrame(loop);
-}
-
-/* ===== Butonlar ===== */
-btnStart.onclick = ()=>{ readUI(); if(!raf){ last=0; raf=requestAnimationFrame(loop); } };
-btnStop.onclick  = ()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } };
-btnReset.onclick = ()=>{ if(raf){ cancelAnimationFrame(raf); raf=null; } t=0; ang=0; render(); };
-
-/* Presetler */
-btn4x90.onclick = ()=>{ inpN.value=4;  inpAngles.value="0,90,180,270"; readUI(); render(); };
-btn6x60.onclick = ()=>{ inpN.value=6;  inpAngles.value="0,60,120,180,240,300"; readUI(); render(); };
-btn8x45.onclick = ()=>{ inpN.value=8;  inpAngles.value="0,45,90,135,180,225,270,315"; readUI(); render(); };
-btn12x30.onclick= ()=>{ inpN.value=12; inpAngles.value=Array.from({length:12},(_,i)=>i*30).join(","); readUI(); render(); };
-
-/* Resize'da hizayı koru */
-window.addEventListener('resize', placeCoils);
-
-/* Init */
-buildCoils(); readUI(); render();
-</script>
-</body>
-</html>
+  .stats{font:12px/1.6 ui-monospace,
